<resources>
    <string name="app_name">Smart Reminder</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>

    <string name="title_activity_splash">SplashActivity</string>

    <string name="menu_addlist">To-Do</string>
    <string name="menu_calender">Calendar</string>
    <string name="menu_birthdays">Birthdays</string>
    <string name="menu_remindme">Remind Me</string>
    <string name="menu_share">Share</string>
    <string name="menu_about">About</string>
    <string name="action_delete_all">Delete all records</string>

    <string name="title_home">Home</string>
    <string name="title_Notes">Notes</string>
    <string name="title_notify">Notify</string>

    <string name="empty_view_title_text">It\'s a bit lonely here&#8230;</string>
    <string name="empty_view_subtitle_text">Get started by adding a note</string>

    <string name="project_name">Project name: Smart Reminder</string>
    <string name="contributed_by">Designed by: Bhagirathi rohidas,\nChandan sahoo and Raju musri</string>
    <string name="project_version">Project version: 1.0.0</string>
    <string name="title_activity_editor">EditorActivity</string>

    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="hint_notes">notes</string>

    <string name="editor_activity_title_new_note">Add a Note</string>
    <string name="editor_activity_title_edit_note">Edit Note</string>
    <string name="provide_valid_data">can not save empty</string>

    <string name="editor_insert_note_successful">Note saved</string>
    <string name="editor_insert_note_failed">Error with saving Note</string>
    <string name="editor_update_note_successful">Note saved</string>
    <string name="editor_update_note_failed">Error with saving note</string>
    <string name="error">error</string>
    <string name="enter_data">Enter The Data.</string>
    <string name="delete_dialog_msg">Delete this note?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <string name="editor_delete_note_successful">note deleted</string>
    <string name="editor_delete_note_failed">Error with deleting note</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="can_not_empty">can\'t empty</string>
    <string name="title_calender_text">title</string>
    <string name="location_calender_text">location</string>
    <string name="description_calender_text">description</string>
    <string name="title_activity_birthday">BirthdayActivity</string>
    <string name="title_activity_remind_me">RemindMeActivity</string>
    <string name="delete_this_reminder">Delete this reminder</string>
    <string name="delete_this_birthday">Delete this birthday</string>

    <string name="add">Add</string>
    <string name="edit">Edit</string>

    <string name="delete_birthday_successful">birthday deleted</string>
    <string name="delete_birthday_failed">error with deleting birthday</string>

    <string name="birthday_saved">Birthday Saved</string>
    <string name="birthday_insert_failed">error with saving birthday</string>

<!--    for reminder activity-->
    <string name="delete_reminder_successful">reminder deleted</string>
    <string name="delete_reminder_failed">error with deleting reminder</string>
    <string name="reminder_saved">reminder Saved</string>
    <string name="reminder_insert_failed">error with saving reminder</string>


    <string name="all_records_deleted">All records deleted</string>
    <string name="all_records_deleted_failed">record deletion failed</string>
    <string name="add_something">add something</string>
    <string name="show_all">Show all items</string>
    <string name="snooze">Snooze</string>
</resources>
