<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_notify"
            android:icon="@drawable/ic_alarm_black_24dp"
            android:title="@string/title_notify" />

        <item
            android:id="@+id/nav_add_list"
            android:icon="@drawable/ic_add_black_24dp"
            android:title="@string/menu_addlist" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_event_note_black_24dp"
            android:title="@string/menu_calender" />
        <item
            android:id="@+id/nav_birthdays"
            android:icon="@drawable/ic_cake_black_24dp"
            android:title="@string/menu_birthdays" />
        <item
            android:id="@+id/nav_remind_me"
            android:icon="@drawable/ic_notifications_active_black_24dp"
            android:title="@string/menu_remindme" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/menu_about" />
        </menu>
    </item>

</menu>
