<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottam_navigation"
    app:startDestination="@+id/nav_home">
    <fragment
        android:id="@+id/nav_home"
        android:name="com.bhagi.smartreminder.ui.calendar.CalendarFragment"
        android:label="@string/menu_home"/>
    <!--        tools:layout="@layout/fragment_add" />-->

    <fragment
        android:id="@+id/nav_notes"
        android:name="com.bhagi.smartreminder.ui.addList.AddListFragment"
        android:label="@string/title_Notes"/>
    <!--        tools:layout="@layout/fragment_calendar" />-->

    <fragment
        android:id="@+id/nav_notify"
        android:name="com.bhagi.smartreminder.ui.remindMe.RemindMeFragment"
        android:label="@string/title_notify"/>
    <!--        tools:layout="@layout/fragment_birthday" />-->
</navigation>