<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/project_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/project_name"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/contributed_by"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contributed_by"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/version_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/project_version"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="16sp" />

</LinearLayout>